--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -4,7 +4,10 @@ html {font-family: Helvetica;
     }
 .header {background-image: url("../images/glasses-bg.png");
          height: 30rem;
+         /*display: flex;
+         background-position: center;*/
          background-size: cover;
+         width: 100%
        }
 .header span {color: white;
                   padding-right: 1rem;
@@ -13,8 +16,8 @@ html {font-family: Helvetica;
                   height: 1.5rem;
 }
 .topbanner {background: cadetblue;
-      display: inline-flex;
-      justify-content: space-between;
+      display: flex;
+      align-items: center;
       margin-top: 1rem;
       width: 100%;
       }
@@ -24,7 +27,6 @@ html {font-family: Helvetica;
                 padding-top: 1rem;
                 padding-bottom: 1rem;
                 height: 1.5rem;
-
           }
 .navmenu li {list-style-type: none;
              color: white;
@@ -43,16 +45,24 @@ html {font-family: Helvetica;
 }
 .midsectionnav {display: flex;
                 margin: 3rem;
-                justify-content: space-between;
+                justify-content: center;
                 height: 8rem;
+                width: 960px;
+                align-items: center;
 }
 
-.midsectionnav img .paper {width: 3.5rem;
-}
-.midsectionnav img .ruler {width: 5rem;
+.feature {width: 5rem;
+          height: 8rem;
+          display: flex;
+          flex-direction: column;
+          /*align-items: center;
+          text-align: center;*/
+          justify-content: space-between;
+
 }
 .midsectionnav h3 {margin-right: 6rem;
-                  align-items: center;
+                  /*align-items: center;
+                  text-align: center;*/
 }
 .introheading {display: flex;
                color: white;
@@ -73,7 +83,12 @@ html {font-family: Helvetica;
 footer {background-color: azure;
         padding: 4rem 1rem 4rem 4rem;
         height: 1.5rem;
+        display: flex;
+        align-items: center;
       }
-footer img {
+footer img {padding-top: 4rem;
+            padding-right: 1rem;
+            padding-bottom: 4rem;
+            padding-left: 4rem;
 
 }
