--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -32,6 +32,7 @@ html {font-family: Helvetica;
              color: white;
              padding: 1rem 2rem;
              display: inline-flex;
+             justify-content: flex-end;
 }
 
 .container {width: 960px;
@@ -72,7 +73,7 @@ html {font-family: Helvetica;
 .othercontent p {margin-top: 1rem;
                  color: black;
                  margin-right: 5rem;
-                 /*max-width: 35%;*/
+                 max-width: 55%;
 }
 #philo h3,
 #appt h3 {width: 10rem;
@@ -91,4 +92,34 @@ footer img {padding-top: 4rem;
             padding-bottom: 4rem;
             padding-left: 4rem;
 
+}
+/*Desktop styles*/
+@media only screen and (min-width: 961px) {}
+
+/*Tablet styles  */
+@media only screen and (min-width: 401px) and (max-width: 960px){
+  .jumbotron {font-size: 1.33rem;
+              padding: .75rem 4rem;
+              float: right;
+              line-height: 1.2;
+              margin-top: 5rem;
+}
+
+/*Mobile styles  */
+@media only screen and (max-width: 400px) {
+  .header
+        {
+         height: 30rem;
+         /*display: flex;*/
+         background-position: 20%;
+         background-size: cover;
+         width: 100%
+       }
+       .jumbotron {width: 100%;
+                   padding: 1rem auto;
+                   text-align: center;
+                   line-height: 1.2;
+                   margin-top: 9rem;
+       }
+       .footer span {display: none;}
 }
